--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Textutils is a Utility which can be used to manuplate your text in the way you want.
+      content="Textutils is word counter and character counting Utility which can be used to manuplate your text in the way you want. you can remove extra spaces ,copy the manipulate text as well as convert your text from lowercase to uppercase and uppercase to lowercase
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     
+    <link rel="favicon-16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link rel="favicon-16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
    <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Textutils -Home</title>
+    <title>Textutils -Word ccounter | character counter | lowercase to uppercase | Uppercase to lowercase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
